sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:14: error: ';' expected but 'true' found.
    while ((i>0)&&(plusPetit(v,getValeur(i-1))))==true){
                                                  ^